// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render nothing if cart is empty 1`] = `
<div>
  <div
    class="cart-drawer"
  >
    <div
      class="cart-overlay"
    />
    <div
      class="cart-container"
    >
      <div
        class="cart-header"
      >
        <h2>
          Your Shopping Cart
        </h2>
        <i
          class="fa-solid fa-x"
        />
      </div>
      <div
        class="cart-items-container"
      >
        <div>
          No items yet...
        </div>
      </div>
      <div
        class="cart-total"
      >
        Total: $
        0.00
      </div>
      <button
        class="checkout"
      >
        Checkout
      </button>
    </div>
  </div>
</div>
`;

exports[`should render one item in cart 1`] = `
<div>
  <div
    class="cart-drawer"
  >
    <div
      class="cart-overlay"
    />
    <div
      class="cart-container"
    >
      <div
        class="cart-header"
      >
        <h2>
          Your Shopping Cart
        </h2>
        <i
          class="fa-solid fa-x"
        />
      </div>
      <div
        class="cart-items-container"
      >
        <div
          class="cart-item"
          name="Citrus Bag"
          type="bags"
        >
          <div
            class="cart-item-img-container"
          >
            <img
              alt="[object Object]"
              class="cart-item-img"
              src="citrus_bag.png"
            />
          </div>
          <div
            class="cart-item-side"
          >
            <div
              class="cart-item-info"
            >
              <div
                class="cart-item-name"
              >
                Citrus Bag
              </div>
              <div
                class="cart-item-price"
              >
                $45.00
              </div>
            </div>
            <div
              class="cart-item-quantity-container"
            >
              <button>
                -
              </button>
              <input
                class="cart-item-quantity-input"
                type="number"
                value="1"
              />
              <button>
                +
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="cart-total"
      >
        Total: $
        45.00
      </div>
      <button
        class="checkout"
      >
        Checkout
      </button>
    </div>
  </div>
</div>
`;

exports[`should render two items in cart 1`] = `
<div>
  <div
    class="cart-drawer"
  >
    <div
      class="cart-overlay"
    />
    <div
      class="cart-container"
    >
      <div
        class="cart-header"
      >
        <h2>
          Your Shopping Cart
        </h2>
        <i
          class="fa-solid fa-x"
        />
      </div>
      <div
        class="cart-items-container"
      >
        <div
          class="cart-item"
          name="Citrus Bag"
          type="bags"
        >
          <div
            class="cart-item-img-container"
          >
            <img
              alt="[object Object]"
              class="cart-item-img"
              src="citrus_bag.png"
            />
          </div>
          <div
            class="cart-item-side"
          >
            <div
              class="cart-item-info"
            >
              <div
                class="cart-item-name"
              >
                Citrus Bag
              </div>
              <div
                class="cart-item-price"
              >
                $45.00
              </div>
            </div>
            <div
              class="cart-item-quantity-container"
            >
              <button>
                -
              </button>
              <input
                class="cart-item-quantity-input"
                type="number"
                value="1"
              />
              <button>
                +
              </button>
            </div>
          </div>
        </div>
        <div
          class="cart-item"
          name="Bowler"
          type="hats"
        >
          <div
            class="cart-item-img-container"
          >
            <img
              alt="[object Object]"
              class="cart-item-img"
              src="bowler.jpg"
            />
          </div>
          <div
            class="cart-item-side"
          >
            <div
              class="cart-item-info"
            >
              <div
                class="cart-item-name"
              >
                Bowler
              </div>
              <div
                class="cart-item-price"
              >
                $25.00
              </div>
            </div>
            <div
              class="cart-item-quantity-container"
            >
              <button>
                -
              </button>
              <input
                class="cart-item-quantity-input"
                type="number"
                value="3"
              />
              <button>
                +
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="cart-total"
      >
        Total: $
        120.00
      </div>
      <button
        class="checkout"
      >
        Checkout
      </button>
    </div>
  </div>
</div>
`;
